# lazy-matcher

./: .gitignore  README.md  docker-compose.yml  leapcell.yaml  render.yaml
.github/workflows/: deploy.yml  worker-poll.yml
.hive/: issues.jsonl
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_years_exp_and_llm_model.py
backend/app/: main.py
backend/app/api/: matches.py
backend/app/core/: celery.py  config.py
backend/app/db/: seed.py  session.py
backend/app/models/: __init__.py  candidate.py  match.py
backend/app/schemas/: __init__.py
backend/app/services/: cache.py  llm_scoring.py  notifier.py  scoring.py
backend/app/worker/: celery_worker.py  runner.py  tasks.py
backend/tests/: test_matches.py
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: JobCard.module.css  JobCard.tsx  MatchDashboard.module.css  MatchDashboard.tsx  MatchForm.module.css  MatchForm.tsx
frontend/src/lib/: api.ts
frontend/tests/: dashboard.spec.ts
